# victor

./: .gitignore  Cargo.toml  README.md  config.toml  justfile  setup.sh
scripts/: cargo.sh  exports.sh
src/: config.rs  handler.rs  logging.rs  mail.rs  main.rs  structs.rs
