[package]
name = "victor"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.39"
mail-parser = "0.9.4"
minismtp = { git = "https://github.com/teppyboy/minismtp", version = "0.1.1" }
rand = "0.8.5"
redis = { version = "0.27.6", features = ["tokio-comp"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
